# latex-napkin

./: .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: ci.yml
<<cookiecutter.project_slug>>/: README.md  main.tex
<<cookiecutter.project_slug>>/tex/: preamble.tex
hooks/: post_gen_project.py
tests/: test_cookiecutter.py
{{<<cookiecutter.project_slug>>}}/: .gitignore  requirements.txt
{{<<cookiecutter.project_slug>>}}/tex/: preamble.tex
{{cookiecutter.project_slug}}/: .gitignore  .latexmkrc  README.md  main.tex
{{cookiecutter.project_slug}}/tex/: macros.tex  preamble.tex
