[project]
name = "latex-napkin"
version = "0.0.0"
description = "A Cookiecutter template for LaTeX projects."
requires-python = ">=3.11"
dependencies = [
    "cookiecutter>=2.6.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cookies>=0.7.0",
    "ruff>=0.15.1",
]

[tool.ruff]
extend-exclude = [
    "*cookiecutter.project_slug*",
    "hooks",
]
